--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sundari - Tamil-Inspired AI Video Generator</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_ADSENSE_CLIENT_ID" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Tamil:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -25,118 +26,51 @@
       width: 90%;
       padding: 40px 20px;
       text-align: center;
-      position: relative;
-      z-index: 2;
     }
     .logo {
       font-family: 'Noto Serif Tamil', serif;
       font-size: 2.5rem;
-      color: #1d1d1f;
       font-weight: 700;
-      margin-bottom: 16px;
-      letter-spacing: -0.5px;
     }
     .tagline {
-      font-size: 1.25rem;
-      font-weight: 400;
       color: #6e6e73;
-      margin-bottom: 32px;
-      max-width: 500px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 20px 0;
     }
     .input, .select {
-      background: #f5f5f7;
-      border: 1px solid #d2d2d7;
-      border-radius: 12px;
-      padding: 12px 16px;
-      color: #1d1d1f;
       width: 100%;
-      box-sizing: border-box;
-      margin-bottom: 16px;
-      font-size: 1rem;
-      font-family: 'Inter', sans-serif;
-      transition: border-color 0.2s ease, background 0.2s ease;
-    }
-    .input::placeholder {
-      color: #86868b;
-    }
-    .input:focus, .select:focus {
-      outline: none;
-      border-color: #0071e3;
-      background: #fff;
+      padding: 12px;
+      margin: 10px 0;
+      border-radius: 12px;
+      border: 1px solid #d2d2d7;
+      background: #f5f5f7;
     }
     .button {
       background: #0071e3;
-      color: #fff;
+      color: white;
       padding: 12px 24px;
+      border-radius: 12px;
       border: none;
-      border-radius: 12px;
-      font-size: 1rem;
-      font-weight: 500;
       cursor: pointer;
-      display: inline-block;
-      transition: background 0.2s ease, transform 0.2s ease;
-    }
-    .button:hover {
-      background: #0077ed;
-      transform: scale(1.02);
-    }
-    .button:active {
-      background: #0066cc;
-    }
-    .status {
-      color: #1d1d1f;
-      font-size: 0.9rem;
-      font-weight: 400;
-      margin-top: 16px;
-    }
-    .video {
-      width: 100%;
-      border-radius: 12px;
-      margin-top: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    .download {
-      color: #0071e3;
-      text-align: center;
-      display: block;
-      margin-top: 8px;
-      text-decoration: none;
-      font-size: 0.9rem;
-      font-weight: 500;
-      transition: color 0.2s ease;
-    }
-    .download:hover {
-      color: #0077ed;
-    }
-    .watermark {
-      color: #86868b;
-      text-align: center;
-      margin-top: 8px;
-      font-size: 0.8rem;
-      font-family: 'Noto Serif Tamil', serif;
     }
     .loader {
       display: none;
+      margin-top: 16px;
       width: 24px;
       height: 24px;
       border: 3px solid #d2d2d7;
       border-top: 3px solid #0071e3;
       border-radius: 50%;
       animation: spin 1s linear infinite;
-      margin: 16px auto;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-    .adsbygoogle {
-      margin-top: 24px;
-      border-radius: 12px;
-      overflow: hidden;
-      max-width: 600px;
-      width: 100%;
+    .video, .download, .watermark {
+      margin-top: 16px;
+    }
+    .hidden {
+      display: none;
     }
   </style>
 </head>
@@ -144,7 +78,7 @@
   <div class="container">
     <h1 class="logo">Sundari</h1>
     <p class="tagline">Create Tamil-inspired AI videos with unparalleled elegance.</p>
-    <input id="prompt" class="input" type="text" placeholder="E.g., a Tamil temple festival at sunset">
+    <input id="prompt" class="input" placeholder="E.g., a Tamil temple festival at sunset" />
     <select id="style" class="select">
       <option value="kollywood">Kollywood</option>
       <option value="realistic">Realistic</option>
@@ -154,37 +88,19 @@
     <div id="loader" class="loader"></div>
     <div id="status" class="status"></div>
     <video id="videoOutput" controls class="video hidden"></video>
-    <a id="downloadLink" class="download hidden" href="#" download>Download Video</a>
+    <a id="downloadLink" class="download hidden" href="#" download="sundari_video.mp4">Download Video</a>
     <p id="watermark" class="watermark hidden">Made with Sundari</p>
   </div>
-  <ins class="adsbygoogle" style="display:block" data-ad-client="YOUR_ADSENSE_CLIENT_ID" data-ad-slot="YOUR_ADSENSE_SLOT_ID" data-ad-format="auto" data-full-width-responsive="true"></ins>
+
   <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+    const { createFFmpeg, fetchFile } = FFmpeg;
+    const ffmpeg = createFFmpeg({ log: true });
 
-    // GSAP animations
-    gsap.from('.container', { opacity: 0, y: 20, duration: 0.5, ease: 'power2.out' });
-    gsap.from('.logo', { opacity: 0, y: 10, duration: 0.5, ease: 'power2.out', delay: 0.1 });
-    gsap.from('.tagline, .input, .select, .button', { opacity: 0, y: 10, duration: 0.5, stagger: 0.1, ease: 'power2.out', delay: 0.2 });
-
-    document.querySelector('.input').addEventListener('focus', () => {
-      gsap.to('.input', { borderColor: '#0071e3', background: '#fff', duration: 0.2 });
-    });
-    document.querySelector('.input').addEventListener('blur', () => {
-      gsap.to('.input', { borderColor: '#d2d2d7', background: '#f5f5f7', duration: 0.2 });
-    });
-    document.querySelector('.select').addEventListener('focus', () => {
-      gsap.to('.select', { borderColor: '#0071e3', background: '#fff', duration: 0.2 });
-    });
-    document.querySelector('.select').addEventListener('blur', () => {
-      gsap.to('.select', { borderColor: '#d2d2d7', background: '#f5f5f7', duration: 0.2 });
-    });
-
-    // Video generation
     document.getElementById('generateButton').addEventListener('click', async () => {
-      const prompt = document.getElementById('prompt').value;
+      const prompt = document.getElementById('prompt').value.trim();
       const style = document.getElementById('style').value;
-      const status = document.getElementById('status');
       const loader = document.getElementById('loader');
+      const status = document.getElementById('status');
       const videoOutput = document.getElementById('videoOutput');
       const downloadLink = document.getElementById('downloadLink');
       const watermark = document.getElementById('watermark');
@@ -194,52 +110,60 @@
         return;
       }
 
-      status.innerText = 'Generating video...';
+      status.innerText = 'Generating video and audio...';
       loader.style.display = 'block';
       videoOutput.classList.add('hidden');
       downloadLink.classList.add('hidden');
       watermark.classList.add('hidden');
 
       try {
-        // Call Hugging Face API for video (Stable Video Diffusion)
-        const videoResponse = await fetch('https://api-inference.huggingface.co/models/stabilityai/stable-video-diffusion', {
+        // Fetch video
+        const videoRes = await fetch('https://api-inference.huggingface.co/models/stabilityai/stable-video-diffusion', {
           method: 'POST',
           headers: {
             'Authorization': 'Bearer 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',
-            'Content-Type': 'application/json'
+            'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ prompt, style, duration: 5 })
+          body: JSON.stringify({ prompt, style, duration: 5 }),
         });
+        if (!videoRes.ok) throw new Error('Video generation failed');
+        const videoBlob = await videoRes.blob();
 
-        if (!videoResponse.ok) throw new Error('Video generation failed.');
-        const videoBlob = await videoResponse.blob();
-        const videoUrl = URL.createObjectURL(videoBlob);
-
-        // Call Hugging Face API for audio (Audiocraft)
-        const audioResponse = await fetch('https://api-inference.huggingface.co/models/facebook/audiocraft', {
+        // Fetch audio
+        const audioRes = await fetch('https://api-inference.huggingface.co/models/facebook/audiocraft', {
           method: 'POST',
           headers: {
             'Authorization': 'Bearer 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',
-            'Content-Type': 'application/json'
+            'Content-Type': 'application/json',
           },
-          body: JSON.stringify({ prompt, type: 'ambient' })
+          body: JSON.stringify({ prompt, type: 'ambient' }),
         });
+        if (!audioRes.ok) throw new Error('Audio generation failed');
+        const audioBlob = await audioRes.blob();
 
-        if (!audioResponse.ok) throw new Error('Audio generation failed.');
-        const audioBlob = await audioResponse.blob();
-        const audioUrl = URL.createObjectURL(audioBlob);
+        const videoFile = new File([videoBlob], 'video.mp4');
+        const audioFile = new File([audioBlob], 'audio.mp3');
 
-        // Combine video and audio (simplified for MVP)
-        videoOutput.src = videoUrl; // Placeholder: audio-video sync needs server-side processing
+        if (!ffmpeg.isLoaded()) await ffmpeg.load();
+
+        ffmpeg.FS('writeFile', 'video.mp4', await fetchFile(videoFile));
+        ffmpeg.FS('writeFile', 'audio.mp3', await fetchFile(audioFile));
+
+        await ffmpeg.run('-i', 'video.mp4', '-i', 'audio.mp3', '-c:v', 'copy', '-c:a', 'aac', '-shortest', 'output.mp4');
+
+        const data = ffmpeg.FS('readFile', 'output.mp4');
+        const mergedBlob = new Blob([data.buffer], { type: 'video/mp4' });
+        const mergedUrl = URL.createObjectURL(mergedBlob);
+
+        videoOutput.src = mergedUrl;
         videoOutput.classList.remove('hidden');
-        downloadLink.href = videoUrl;
+        downloadLink.href = mergedUrl;
         downloadLink.classList.remove('hidden');
         watermark.classList.remove('hidden');
-        status.innerText = 'Video generated. Download or share it.';
-        loader.style.display = 'none';
-        gsap.from('.video, .download, .watermark', { opacity: 0, y: 10, duration: 0.5, ease: 'power2.out' });
-      } catch (error) {
-        status.innerText = 'Error: ' + error.message;
+        status.innerText = 'Video generated successfully.';
+      } catch (err) {
+        status.innerText = 'Error: ' + err.message;
+      } finally {
         loader.style.display = 'none';
       }
     });
