--- a/index.html
+++ b/index.html
@@ -1,172 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sundari - Tamil-Inspired AI Video Generator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_ADSENSE_CLIENT_ID" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Tamil:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Sundari AI Video Generator</title>
+  <script type="module">
+    import { InferenceClient } from "https://cdn.skypack.dev/@huggingface/inference";
+
+    const client = new InferenceClient("Bearer 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"); // 🔁 Replace with your HF token
+
+    window.generateVideo = async function () {
+      const prompt = document.getElementById("prompt").value;
+      const style = document.getElementById("style").value;
+      const loader = document.getElementById("loader");
+      const video = document.getElementById("video");
+      const download = document.getElementById("download");
+
+      loader.textContent = "Generating video...";
+      loader.style.display = "block";
+      video.style.display = "none";
+      download.style.display = "none";
+
+      try {
+        const output = await client.textToVideo({
+          provider: "fal-ai",
+          model: "Lightricks/LTX-Video",
+          inputs: `${prompt} in ${style} style`
+        });
+
+        const blob = output;
+        const url = URL.createObjectURL(blob);
+
+        video.src = url;
+        video.style.display = "block";
+        video.load();
+
+        download.href = url;
+        download.download = "sundari-video.mp4";
+        download.style.display = "inline-block";
+        loader.style.display = "none";
+      } catch (error) {
+        console.error("Error:", error);
+        loader.textContent = "Failed to generate video.";
+      }
+    };
+  </script>
+
   <style>
     body {
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #fff;
-      font-family: 'Inter', sans-serif;
-      color: #1d1d1f;
-      overflow-x: hidden;
-    }
-    .container {
-      max-width: 600px;
-      width: 90%;
-      padding: 40px 20px;
+      font-family: sans-serif;
       text-align: center;
+      padding: 20px;
+      background-color: #fdfaf6;
     }
-    .logo {
-      font-family: 'Noto Serif Tamil', serif;
-      font-size: 2.5rem;
-      font-weight: 700;
+
+    input, select, button {
+      padding: 10px;
+      margin: 8px;
+      font-size: 16px;
     }
-    .tagline {
-      color: #6e6e73;
-      margin: 20px 0;
+
+    video {
+      margin-top: 20px;
+      max-width: 90%;
+      border-radius: 10px;
     }
-    .input, .select {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 12px;
-      border: 1px solid #d2d2d7;
-      background: #f5f5f7;
+
+    #loader {
+      font-weight: bold;
+      margin-top: 10px;
     }
-    .button {
-      background: #0071e3;
+
+    a#download {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      background-color: #4CAF50;
       color: white;
-      padding: 12px 24px;
-      border-radius: 12px;
-      border: none;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+
+    button {
       cursor: pointer;
+      background-color: #007BFF;
+      border: none;
+      color: white;
+      border-radius: 5px;
     }
-    .loader {
-      display: none;
-      margin-top: 16px;
-      width: 24px;
-      height: 24px;
-      border: 3px solid #d2d2d7;
-      border-top: 3px solid #0071e3;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-    .video, .download, .watermark {
-      margin-top: 16px;
-    }
-    .hidden {
-      display: none;
+
+    button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1 class="logo">Sundari</h1>
-    <p class="tagline">Create Tamil-inspired AI videos with unparalleled elegance.</p>
-    <input id="prompt" class="input" placeholder="E.g., a Tamil temple festival at sunset" />
-    <select id="style" class="select">
-      <option value="kollywood">Kollywood</option>
-      <option value="realistic">Realistic</option>
-      <option value="cartoon">Cartoon</option>
-    </select>
-    <button id="generateButton" class="button">Generate Video</button>
-    <div id="loader" class="loader"></div>
-    <div id="status" class="status"></div>
-    <video id="videoOutput" controls class="video hidden"></video>
-    <a id="downloadLink" class="download hidden" href="#" download="sundari_video.mp4">Download Video</a>
-    <p id="watermark" class="watermark hidden">Made with Sundari</p>
-  </div>
 
-  <script>
-    const { createFFmpeg, fetchFile } = FFmpeg;
-    const ffmpeg = createFFmpeg({ log: true });
+  <h1>🎥 Sundari – Tamil AI Video Generator</h1>
 
-    document.getElementById('generateButton').addEventListener('click', async () => {
-      const prompt = document.getElementById('prompt').value.trim();
-      const style = document.getElementById('style').value;
-      const loader = document.getElementById('loader');
-      const status = document.getElementById('status');
-      const videoOutput = document.getElementById('videoOutput');
-      const downloadLink = document.getElementById('downloadLink');
-      const watermark = document.getElementById('watermark');
+  <input type="text" id="prompt" placeholder="Enter your prompt (e.g., Tamil girl dancing)" size="40">
+  <select id="style">
+    <option value="kollywood">Kollywood</option>
+    <option value="realistic">Realistic</option>
+    <option value="cartoon">Cartoon</option>
+  </select>
+  <br>
+  <button onclick="generateVideo()">Generate Video</button>
 
-      if (!prompt) {
-        status.innerText = 'Please enter a prompt.';
-        return;
-      }
+  <div id="loader"></div>
 
-      status.innerText = 'Generating video and audio...';
-      loader.style.display = 'block';
-      videoOutput.classList.add('hidden');
-      downloadLink.classList.add('hidden');
-      watermark.classList.add('hidden');
+  <video id="video" controls style="display:none;"></video>
+  <br>
+  <a id="download">Download Video</a>
 
-      try {
-        // Fetch video
-        const videoRes = await fetch('https://api-inference.huggingface.co/models/stabilityai/stable-video-diffusion', {
-          method: 'POST',
-          headers: {
-            'Authorization': 'Bearer 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',
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ prompt, style, duration: 5 }),
-        });
-        if (!videoRes.ok) throw new Error('Video generation failed');
-        const videoBlob = await videoRes.blob();
-
-        // Fetch audio
-        const audioRes = await fetch('https://api-inference.huggingface.co/models/facebook/audiocraft', {
-          method: 'POST',
-          headers: {
-            'Authorization': 'Bearer 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',
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ prompt, type: 'ambient' }),
-        });
-        if (!audioRes.ok) throw new Error('Audio generation failed');
-        const audioBlob = await audioRes.blob();
-
-        const videoFile = new File([videoBlob], 'video.mp4');
-        const audioFile = new File([audioBlob], 'audio.mp3');
-
-        if (!ffmpeg.isLoaded()) await ffmpeg.load();
-
-        ffmpeg.FS('writeFile', 'video.mp4', await fetchFile(videoFile));
-        ffmpeg.FS('writeFile', 'audio.mp3', await fetchFile(audioFile));
-
-        await ffmpeg.run('-i', 'video.mp4', '-i', 'audio.mp3', '-c:v', 'copy', '-c:a', 'aac', '-shortest', 'output.mp4');
-
-        const data = ffmpeg.FS('readFile', 'output.mp4');
-        const mergedBlob = new Blob([data.buffer], { type: 'video/mp4' });
-        const mergedUrl = URL.createObjectURL(mergedBlob);
-
-        videoOutput.src = mergedUrl;
-        videoOutput.classList.remove('hidden');
-        downloadLink.href = mergedUrl;
-        downloadLink.classList.remove('hidden');
-        watermark.classList.remove('hidden');
-        status.innerText = 'Video generated successfully.';
-      } catch (err) {
-        status.innerText = 'Error: ' + err.message;
-      } finally {
-        loader.style.display = 'none';
-      }
-    });
-  </script>
 </body>
 </html>
