--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
           inputs: `${prompt} in ${style} style`
         });
 
-        const blob = output;
+        if (!output) throw new Error("Failed to generate video");
+
+        const blob = new Blob([output], { type: "video/mp4" });
         const url = URL.createObjectURL(blob);
 
         video.src = url;
@@ -52,24 +54,20 @@
       padding: 20px;
       background-color: #fdfaf6;
     }
-
     input, select, button {
       padding: 10px;
       margin: 8px;
       font-size: 16px;
     }
-
     video {
       margin-top: 20px;
       max-width: 90%;
       border-radius: 10px;
     }
-
     #loader {
       font-weight: bold;
       margin-top: 10px;
     }
-
     a#download {
       display: none;
       margin-top: 10px;
@@ -79,7 +77,6 @@
       text-decoration: none;
       border-radius: 5px;
     }
-
     button {
       cursor: pointer;
       background-color: #007BFF;
@@ -87,7 +84,6 @@
       color: white;
       border-radius: 5px;
     }
-
     button:hover {
       background-color: #0056b3;
     }
